--- a/Wildfire/Views/ProFireInfoView.xaml
+++ b/Wildfire/Views/ProFireInfoView.xaml
@@ -1,8 +1,21 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
+<!-- Author:        Jack McNally
+     Page Name:     ProFireInfoView
+     Purpose:       Info View Fires interface.
+-->
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Wildfire.Views.ProFireInfoView"
-             BackgroundColor="White">
+             x:Class="Wildfire.Views.ProFireInfoView">
+
+    <!--Background-->
+    <ContentPage.Background>
+        <LinearGradientBrush EndPoint="0,1">
+            <GradientStop Color="#ff8c19"  Offset="0.1" />
+            <GradientStop Color="#F7D9BB" Offset="1.0" />
+        </LinearGradientBrush>
+    </ContentPage.Background>
+
+    <!--Content Page-->
     <ContentPage.Content>
         <ScrollView>
             <Grid>
@@ -12,72 +25,88 @@
                     <RowDefinition Height="20"></RowDefinition>
                     <RowDefinition Height="130"></RowDefinition>
                     <RowDefinition Height="*"></RowDefinition>
-                    <RowDefinition Height="50"></RowDefinition>
+                    <RowDefinition Height="56"></RowDefinition>
                     <RowDefinition Height="*"></RowDefinition>
-
-
                 </Grid.RowDefinitions>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*"/>
                     <ColumnDefinition Width="300"/>
                     <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
-
                
-                <Button
-                    Grid.Row="1"
-                    Grid.Column="1"
-                    BorderColor="Black"
-                    BorderWidth="3"
-                    FontSize="20"
-                    BackgroundColor="LightBlue"
-                    CornerRadius="25"
-                    Text="Current Fires"
-                    TextColor="Black"
-                    FontAttributes="Bold"
-                    x:Name="CurrentFires"
-                    Clicked="CurrentFires_Clicked"
-                    IsVisible="true"
-                    >
-
+                <!-- Current Fires Button-->
+                <Button     Grid.Row="1"
+                            Grid.Column="1"
+                            BorderColor="Black"
+                            BorderWidth="3"
+                            FontSize="25"
+                            BackgroundColor="LightBlue"
+                            CornerRadius="25"
+                            Text="Current Fires"
+                            TextColor="Black"
+                            FontAttributes="Italic"
+                            x:Name="CurrentFires"
+                            Clicked="CurrentFires_Clicked"
+                            IsVisible="true"
+                            Padding="0,0,20,0"
+                            ContentLayout="Right" 
+                            ImageSource="currents.png" >
+                    <Button.Background>
+                        <LinearGradientBrush EndPoint="1,0">
+                            <GradientStop Color="LightBlue" Offset="0.3" />
+                            <GradientStop Color="LightSalmon" Offset="1.0" />
+                        </LinearGradientBrush>
+                    </Button.Background>
                 </Button>
 
-                <Button
-                    Grid.Row="3"
-                    Grid.Column="1"
-                    BorderColor="Black"
-                    BorderWidth="3"
-                    FontSize="20"
-                    BackgroundColor="LightBlue"
-                    CornerRadius="25"
-                    Text="Resolved Fires"
-                    TextColor="Black"
-                    FontAttributes="Bold"
-                    x:Name="ResolvedFires"
-                    Clicked="ResolvedFires_Clicked"
-                    IsVisible="true"
-                    >
-
+                <!--Resolved Fires Button-->
+                <Button     Grid.Row="3"
+                            Grid.Column="1"
+                            BorderColor="Black"
+                            BorderWidth="3"
+                            FontSize="25"
+                            BackgroundColor="LightBlue"
+                            CornerRadius="25"
+                            Text="Resolved Fires"
+                            TextColor="Black"
+                            FontAttributes="Italic"
+                            x:Name="ResolvedFires"
+                            Clicked="ResolvedFires_Clicked"
+                            IsVisible="true"
+                            Padding="0,0,20,0"
+                            ContentLayout="Right" 
+                            ImageSource="resolve.png">
+                    <Button.Background>
+                        <LinearGradientBrush EndPoint="1,0">
+                            <GradientStop Color="LightBlue" Offset="0.3" />
+                            <GradientStop Color="LightSalmon" Offset="1.0" />
+                        </LinearGradientBrush>
+                    </Button.Background>
                 </Button>
 
-                <Button
-                    Grid.Row="5"
-                    Grid.Column="1"
-                    BorderColor="Black"
-                    BorderWidth="3"
-                    FontSize="16"
-                    BackgroundColor="LightGray"
-                    CornerRadius="10"
-                    Text="Back"
-                    TextColor="Black"
-                    FontAttributes="Bold"
-                    x:Name="BackButton"
-                    Clicked="BackButton_Clicked">
-                    
+                <!--Back Button-->
+                <Button     Grid.Row="5"
+                            Grid.Column="1"
+                            BorderColor="Black"
+                            BorderWidth="3"
+                            FontSize="20"
+                            BackgroundColor="LightGray"
+                            CornerRadius="10"
+                            Text="Back"
+                            TextColor="Black"
+                            FontAttributes="Bold"
+                            x:Name="BackButton"
+                            ImageSource="backarrow.png"
+                            ContentLayout="Left"
+                            Padding="50,0,75,0"
+                            Clicked="BackButton_Clicked">
+                    <Button.Background>
+                        <LinearGradientBrush EndPoint="0,1">
+                            <GradientStop Color="LightGray"  Offset="0.1" />
+                            <GradientStop Color="white" Offset="1.0" />
+                        </LinearGradientBrush>
+                    </Button.Background>
                 </Button>
-
-                
-               
             </Grid>
            </ScrollView>
     </ContentPage.Content>
