--- a/Wildfire/Views/MapView.xaml
+++ b/Wildfire/Views/MapView.xaml
@@ -15,7 +15,7 @@
     <ContentPage.Background>
         <LinearGradientBrush EndPoint="0,1">
             <GradientStop Color="#ff8c19"  Offset="0.1" />
-            <GradientStop Color="#F7D9BB" Offset="1.0" />
+            <GradientStop Color="White" Offset="1.0" />
         </LinearGradientBrush>
     </ContentPage.Background>
     
