--- a/Wildfire/Views/ProCurrrentSelectedView.xaml
+++ b/Wildfire/Views/ProCurrrentSelectedView.xaml
@@ -1,14 +1,27 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
+<!-- Author:        Jack McNally
+     Page Name:     ProCurrentSelectedView
+     Purpose:       Current fire selected View interface.
+-->
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Wildfire.Views.ProCurrrentSelectedView"
-             BackgroundColor="White">
+             x:Class="Wildfire.Views.ProCurrrentSelectedView">
+
+    <!--Background-->
+    <ContentPage.Background>
+        <LinearGradientBrush EndPoint="0,1">
+            <GradientStop Color="White" Offset="0.8" />
+            <GradientStop Color="#ff8c19"  Offset="1.0" />
+        </LinearGradientBrush>
+    </ContentPage.Background>
+
+    <!--Content Page-->
     <ContentPage.Content>
         <ScrollView>
             <Grid>
                 <Grid.RowDefinitions>
                     <RowDefinition Height="15"></RowDefinition>
-                    <RowDefinition Height="70"></RowDefinition>
+                    <RowDefinition Height="80"></RowDefinition>
                     <RowDefinition Height="5"></RowDefinition>
                     <RowDefinition Height="25"></RowDefinition>
                     <RowDefinition Height="25"></RowDefinition>
@@ -21,8 +34,8 @@
                     <RowDefinition Height="5"></RowDefinition>
                     <RowDefinition Height="25"></RowDefinition>
                     <RowDefinition Height="50"></RowDefinition>
-                    <RowDefinition Height="120"></RowDefinition>
-                    <RowDefinition Height="50"></RowDefinition>
+                    <RowDefinition Height="125"></RowDefinition>
+                    <RowDefinition Height="56"></RowDefinition>
                 </Grid.RowDefinitions>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*"></ColumnDefinition>
@@ -30,146 +43,194 @@
                     <ColumnDefinition Width="*"></ColumnDefinition>
                 </Grid.ColumnDefinitions>
 
-                <Frame BorderColor="Black"
-                        HeightRequest="150"
-                        WidthRequest="100"
-                        Grid.Row="1"
-                        Grid.Column="1"
-                        BackgroundColor="LightGray"
-                        HasShadow="True"
-                        IsVisible="true"
-                        x:Name="FrameLabel"
-                        >
+                <!--Header-->
+                <Frame      BorderColor="LightGray"
+                            Padding="7"
+                            HeightRequest="80"
+                            WidthRequest="300"
+                            Grid.Row="1"
+                            Grid.Column="1"
+                            BackgroundColor="LightGray"
+                            HasShadow="True"
+                            CornerRadius="15"
+                            IsVisible="true"
+                            HorizontalOptions="Center">
 
-                    <Label Text="Fire Information"
-                           FontSize="24"
-                           HorizontalOptions="Center"
-                           VerticalOptions="Center"
-                           TextColor="Black"
-                        ></Label>
+                    <Frame      BorderColor="LightGray"
+                                Padding="7"
+                                HeightRequest="80"
+                                WidthRequest="310"
+                                Grid.Row="1"
+                                Grid.Column="1"
+                                BackgroundColor="LightGray"
+                                HasShadow="True"
+                                CornerRadius="15"
+                                IsVisible="true"
+                                HorizontalOptions="Center">
+                        <Frame.Background>
+                            <LinearGradientBrush EndPoint="0,1">
+                                <GradientStop Color="White"  Offset="0.9" />
+                                <GradientStop Color="LightBlue" Offset="1.0" />
+                            </LinearGradientBrush>
+                        </Frame.Background>
+
+                        <Label      Text="Fire Information"
+                                    FontSize="26"
+                                    HorizontalOptions="Center"
+                                    VerticalOptions="Center"
+                                    TextColor="#282828"
+                                    FontAttributes="Bold">
+                        </Label>
+                    </Frame>
                 </Frame>
 
-                <Label Text="Placename" 
-                       Grid.Row="3" 
-                       TextColor="Black" 
-                       FontSize=" 20" 
-                       Grid.Column="1">
-
+                <!--Placename Label-->
+                <Label      Text="Placename" 
+                            Grid.Row="3" 
+                            TextColor="Black" 
+                            FontSize=" 20" 
+                            Grid.Column="1">
                 </Label>
 
-                <Label x:Name="placeName" 
-                       Grid.Row="4" 
-                       TextColor="Black" 
-                       FontSize="18" 
-                       Grid.Column="1"
-                       Padding="10,0,0,0"
-                       WidthRequest="200"
-                        BackgroundColor="#2daff0">
-
+                <Label      x:Name="placeName" 
+                            Grid.Row="4" 
+                            TextColor="Black" 
+                            FontSize="18" 
+                            Grid.Column="1"
+                            Padding="10,0,0,0"
+                            WidthRequest="200"
+                            BackgroundColor="#2daff0">
+                    <Label.Background>
+                        <LinearGradientBrush EndPoint="1,0">
+                            <GradientStop Color="LightBlue"  Offset="0.5" />
+                            <GradientStop Color="#2daff0" Offset="1.0" />
+                        </LinearGradientBrush>
+                    </Label.Background>
                 </Label>
 
-                <Label Text="Time Found" 
-                       Grid.Row="6" 
-                       TextColor="Black" 
-                       FontSize=" 20" 
-                       Grid.Column="1">
-
+                <!--Time Found Label-->
+                <Label      Text="Time Found" 
+                            Grid.Row="6" 
+                            TextColor="Black" 
+                            FontSize=" 20" 
+                            Grid.Column="1">
                 </Label>
 
-                <Label x:Name="time" 
-                       Grid.Row="7" 
-                       TextColor="Black" 
-                       FontSize=" 18" 
-                       Grid.Column="1"
-                       Padding="10,0,0,0"
-                       WidthRequest="200"
-                       BackgroundColor="#2daff0">
-
+                <Label      x:Name="time" 
+                            Grid.Row="7" 
+                            TextColor="Black" 
+                            FontSize=" 18" 
+                            Grid.Column="1"
+                            Padding="10,0,0,0"
+                            WidthRequest="200"
+                            BackgroundColor="#2daff0">
+                    <Label.Background>
+                        <LinearGradientBrush EndPoint="1,0">
+                            <GradientStop Color="LightBlue"  Offset="0.5" />
+                            <GradientStop Color="#2daff0" Offset="1.0" />
+                        </LinearGradientBrush>
+                    </Label.Background>
                 </Label>
 
-                <Label
-                    Text="Wind Direction"
-                    Grid.Row="9"
-                    TextColor="Black"
-                    FontSize="20"
-                    Grid.Column="1"
-                    >
-                    
+                <!-- Wind Direction Label-->
+                <Label      Text="Wind Direction"
+                            Grid.Row="9"
+                            TextColor="Black"
+                            FontSize="20"
+                            Grid.Column="1">
                 </Label>
 
-                <Label x:Name="windDir"
-                       Grid.Row="10"
-                       TextColor="Black"
-                       FontSize="18"
-                       Grid.Column="1"
-                       Padding="10,0,0,0"
-                       WidthRequest="200"
-                       BackgroundColor="#2daff0">
-                    
+                <Label      x:Name="windDir"
+                            Grid.Row="10"
+                            TextColor="Black"
+                            FontSize="18"
+                            Grid.Column="1"
+                            Padding="10,0,0,0"
+                            WidthRequest="200"
+                            BackgroundColor="#2daff0">
+                    <Label.Background>
+                        <LinearGradientBrush EndPoint="1,0">
+                            <GradientStop Color="LightBlue"  Offset="0.5" />
+                            <GradientStop Color="#2daff0" Offset="1.0" />
+                        </LinearGradientBrush>
+                    </Label.Background>
                 </Label>
 
-                <Label
-                    Text="Description"
-                    Grid.Row="12"
-                    TextColor="Black"
-                    FontSize="20"
-                    Grid.Column="1"
-                    >
-
+                <!--Description Label-->
+                <Label      Text="Description"
+                            Grid.Row="12"
+                            TextColor="Black"
+                            FontSize="20"
+                            Grid.Column="1">
                 </Label>
 
-                <Label x:Name="description"
-                       Grid.Row="13"
-                       TextColor="Black"
-                       FontSize="18"
-                       Grid.Column="1"
-                       Padding="10,0,0,0"
-                       WidthRequest="200"
-                       LineBreakMode="WordWrap"
-                       VerticalOptions="CenterAndExpand"
-                       BackgroundColor="#2daff0">
+                <Label      x:Name="description"
+                            Grid.Row="13"
+                            TextColor="Black"
+                            FontSize="18"
+                            Grid.Column="1"
+                            Padding="10,0,0,0"
+                            WidthRequest="200"
+                            LineBreakMode="WordWrap"
+                            VerticalOptions="CenterAndExpand"
+                            BackgroundColor="#2daff0">
+                    <Label.Background>
+                        <LinearGradientBrush EndPoint="1,0">
+                            <GradientStop Color="LightBlue"  Offset="0.5" />
+                            <GradientStop Color="#2daff0" Offset="1.0" />
+                        </LinearGradientBrush>
+                    </Label.Background>
                 </Label>
 
-                <Label 
-                    x:Name="fireID" 
-                    Grid.Row="0" 
-                    TextColor="White" 
-                    FontSize=" 0" 
-                    Grid.Column="0">
+                <Label      x:Name="fireID" 
+                            Grid.Row="0" 
+                            TextColor="White" 
+                            FontSize="0" 
+                            Grid.Column="0">
                 </Label>
-
-                <Image 
-                    x:Name="currentFire"
-                    Grid.Row="14"
-                    Grid.Column="1"
-                    HeightRequest="125"
-                    Source="photo.png"
-                    >
+                
+                <!--Image Import-->
+                <Image      x:Name="currentFire"
+                            Grid.Row="14"
+                            Grid.Column="1"
+                            HeightRequest="125"
+                            Source="photo.png">
                 </Image>
 
-                <ActivityIndicator x:Name="overlay"  IsRunning="True" IsVisible="True" Color="Black" BackgroundColor="Transparent"                                   
+                <!--Activity Indicator-->
+                <ActivityIndicator x:Name="overlay"  
+                                   IsRunning="True" 
+                                   IsVisible="True" 
+                                   Color="#282828" 
+                                   BackgroundColor="Transparent"                                   
                                    Grid.Column="1"
                                    Grid.Row="14">
                 </ActivityIndicator>
-                
-                <Button  
-                    x:Name="BackButton"
-                    Text="Back" 
-                    WidthRequest="100"                      
-                    Grid.Row="15" 
-                    Grid.Column="1" 
-                    BackgroundColor="LightGray"
-                    FontSize="20"
-                    FontAttributes="Bold"
-                    CornerRadius="10"
-                    BorderWidth="3"
-                    BorderColor="Black"
-                    TextColor="Black"
-                    Clicked="BackButton_Clicked">
-                    
-                </Button>
 
-                
+                <!--Back Button-->
+                <Button     x:Name="BackButton"
+                            Text="Back" 
+                            WidthRequest="100"                      
+                            Grid.Row="15" 
+                            Grid.Column="1" 
+                            BackgroundColor="LightGray"
+                            FontSize="20"
+                            FontAttributes="Bold"
+                            CornerRadius="10"
+                            BorderWidth="3"
+                            BorderColor="Black"
+                            TextColor="Black"
+                            ImageSource="backarrow.png"
+                            ContentLayout="Left"
+                            Padding="40,0,75,0"
+                            Clicked="BackButton_Clicked">
+                    <Button.Background>
+                        <LinearGradientBrush EndPoint="0,1">
+                            <GradientStop Color="LightGray"  Offset="0.1" />
+                            <GradientStop Color="white" Offset="1.0" />
+                        </LinearGradientBrush>
+                    </Button.Background>
+                </Button>
             </Grid>
         </ScrollView>
     </ContentPage.Content>
