--- a/Wildfire/Views/ProResFireView.xaml
+++ b/Wildfire/Views/ProResFireView.xaml
@@ -1,63 +1,113 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
+<!-- Author:        Jack McNally
+     Page Name:     ProResFireView
+     Purpose:       Resolved fires View interface.
+-->    
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Wildfire.Views.ProResFireView"
-             BackgroundColor="White">
+             x:Class="Wildfire.Views.ProResFireView">
+
+    <!--Background-->
+    <ContentPage.Background>
+        <LinearGradientBrush EndPoint="0,1">
+            <GradientStop Color="#F7D9BB"  Offset="0.1" />
+            <GradientStop Color="White" Offset="1.0" />
+        </LinearGradientBrush>
+    </ContentPage.Background>
+
+    <!--Content Page-->
     <ContentPage.Content>
         <StackLayout>
             <StackLayout>
-                <Frame BorderColor="Black" CornerRadius="0" BackgroundColor="LightGray" >
-                    <Label Text="Resolved Fires"
-                               FontSize="20"
-                               FontAttributes="Bold"
-                               TextColor="Black"
-                                   HeightRequest="50"
-                                   VerticalTextAlignment="Center"
-                                   HorizontalTextAlignment="Center"
-                                   
-                                   BackgroundColor="LightGray">
 
-                    </Label>
+                <!--Header-->
+                <Frame      BorderColor="LightGray"
+                            Padding="7"
+                            WidthRequest="400"
+                            HeightRequest="80"
+                            AbsoluteLayout.LayoutFlags="PositionProportional" 
+                            AbsoluteLayout.LayoutBounds="0.5,0.03,-1,-1"
+                            BackgroundColor="LightGray"
+                            HasShadow="True"
+                            CornerRadius="15"
+                            IsVisible="true"
+                            HorizontalOptions="Center">
+
+                    <Frame      BorderColor="LightGray"
+                                Padding="7"
+                                HeightRequest="80"
+                                WidthRequest="400"
+                                AbsoluteLayout.LayoutFlags="PositionProportional" 
+                                AbsoluteLayout.LayoutBounds="0.5,0.03,-1,-1"
+                                BackgroundColor="LightGray"
+                                HasShadow="True"
+                                CornerRadius="15"
+                                IsVisible="true"
+                                HorizontalOptions="Center">
+                        <Frame.Background>
+                            <LinearGradientBrush EndPoint="0,1">
+                                <GradientStop Color="White"  Offset="0.9" />
+                                <GradientStop Color="LightBlue" Offset="1.0" />
+                            </LinearGradientBrush>
+                        </Frame.Background>
+
+                        <Label      Text="Resolved Fires"
+                                    FontSize="26"
+                                    HorizontalOptions="Center"
+                                    VerticalOptions="Center"
+                                    TextColor="#282828"
+                                    FontAttributes="Bold">
+                        </Label>
+                    </Frame>
                 </Frame>
-
             </StackLayout>
 
-            <ListView x:Name="resFires" HasUnevenRows="True" RowHeight="70" BackgroundColor="White" SeparatorColor="Black" ItemTapped="resFires_ItemTapped">
-
+            <!--ListView-->
+            <ListView   x:Name="resFires" 
+                        HasUnevenRows="True" 
+                        RowHeight="70" 
+                        SeparatorColor="Black" 
+                        ItemTapped="resFires_ItemTapped">
+                <ListView.Background>
+                    <LinearGradientBrush EndPoint="0,1">
+                        <GradientStop Color="#F7D9BB"  Offset="0.1" />
+                        <GradientStop Color="white" Offset="1.0" />
+                    </LinearGradientBrush>
+                </ListView.Background>
                 <ListView.ItemTemplate>
-
                     <DataTemplate>
-
-                        <TextCell
-                                Grid.Row="1"
-                              Text="{Binding PlaceName}"
-                              Detail="{Binding ResolvedDescription}"
-                              TextColor="Black"
-                              DetailColor="Gray"
-                              
-                              >
+                        <TextCell   Grid.Row="1"
+                                    Text="{Binding PlaceName}"
+                                    Detail="{Binding ResolvedDescription}"
+                                    TextColor="Black"
+                                    DetailColor="Gray">
                         </TextCell>
                     </DataTemplate>
                 </ListView.ItemTemplate>
             </ListView>
 
-            <Button  
-                    x:Name="BackButton"
-                    Text="Back" 
-                    WidthRequest="100"   
-                    HeightRequest="50"
-                    BackgroundColor="LightGray"
-                    FontSize="20"
-                    FontAttributes="Bold"
-                    
-                    BorderWidth="3"
-                    BorderColor="Black"
-                    TextColor="Black"
-                    Clicked="BackButton_Clicked">
-
+            <!--Back Button-->
+            <Button     x:Name="BackButton"
+                        Text="Back" 
+                        WidthRequest="100"   
+                        HeightRequest="50"
+                        BackgroundColor="LightGray"
+                        FontSize="20"
+                        FontAttributes="Bold"                    
+                        BorderWidth="3"
+                        BorderColor="Black"
+                        TextColor="Black"
+                        ImageSource="backarrow.png"
+                        ContentLayout="Left"
+                        Padding="50,0,75,0"
+                        Clicked="BackButton_Clicked">
+                <Button.Background>
+                    <LinearGradientBrush EndPoint="0,1">
+                        <GradientStop Color="LightGray"  Offset="0.1" />
+                        <GradientStop Color="white" Offset="1.0" />
+                    </LinearGradientBrush>
+                </Button.Background>
             </Button>
-
-
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
