--- a/Wildfire/Views/ResolveFireInfoView.xaml
+++ b/Wildfire/Views/ResolveFireInfoView.xaml
@@ -1,29 +1,39 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
+<!-- Author:        Jack McNally
+     Page Name:     ResolveFireInfoView
+     Purpose:       Resolve fire interface.
+-->
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Wildfire.Views.ResolveFireInfoView"
-             BackgroundColor="White">
+             x:Class="Wildfire.Views.ResolveFireInfoView">
+
+    <!--Background-->
+    <ContentPage.Background>
+        <LinearGradientBrush EndPoint="0,1">
+            <GradientStop Color="White" Offset="0.1" />
+            <GradientStop Color="#F7D9BB"  Offset="1.0" />
+        </LinearGradientBrush>
+    </ContentPage.Background>
+
+    <!--Content Page-->
     <ContentPage.Content>
         <ScrollView>
-            <Grid>
+            <Grid RowSpacing="10">
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="10"></RowDefinition>
+                    <RowDefinition Height="0"></RowDefinition>
                     <RowDefinition Height="70"></RowDefinition>
                     <RowDefinition Height="25"></RowDefinition>
                     <RowDefinition Height="25"></RowDefinition>
-                    <RowDefinition Height="120"></RowDefinition>
+                    <RowDefinition Height="100"></RowDefinition>
                     <RowDefinition Height="25"></RowDefinition>
                     <RowDefinition Height="80"></RowDefinition>
-                    <RowDefinition Height="10"></RowDefinition>
-                    <RowDefinition Height="50"></RowDefinition>
-                    <RowDefinition Height="50"></RowDefinition>
-                    <RowDefinition Height="120"></RowDefinition>
-                    <RowDefinition Height="10"></RowDefinition>
-                    <RowDefinition Height="50"></RowDefinition>
-                    <RowDefinition Height="5"></RowDefinition>
-                    <RowDefinition Height="50"></RowDefinition>
-                    <RowDefinition Height="5"></RowDefinition>
-                    
+                    <RowDefinition Height="0"></RowDefinition>
+                    <RowDefinition Height="56"></RowDefinition>
+                    <RowDefinition Height="56"></RowDefinition>
+                    <RowDefinition Height="100"></RowDefinition>
+                    <RowDefinition Height="0"></RowDefinition>
+                    <RowDefinition Height="56"></RowDefinition>
+                    <RowDefinition Height="56"></RowDefinition>
                 </Grid.RowDefinitions>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*"/>
@@ -31,122 +41,228 @@
                     <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
 
-                <Frame
+                    <!--Header-->
+                    <Frame      BorderColor="LightGray"
+                                Padding="7"
+                                HeightRequest="80"
+                                WidthRequest="300"
+                                Grid.Row="1"
+                                Grid.Column="1"
+                                BackgroundColor="LightGray"
+                                HasShadow="True"
+                                CornerRadius="15"
+                                IsVisible="true"
+                                HorizontalOptions="Center">
+
+                        <Frame      BorderColor="LightGray"
+                                    Padding="7"
+                                    HeightRequest="80"
+                                    WidthRequest="310"
+                                    Grid.Row="1"
+                                    Grid.Column="1"
+                                    BackgroundColor="LightGray"
+                                    HasShadow="True"
+                                    CornerRadius="15"
+                                    IsVisible="true"
+                                    HorizontalOptions="Center">
+                            <Frame.Background>
+                                <LinearGradientBrush EndPoint="0,1">
+                                    <GradientStop Color="White"  Offset="0.9" />
+                                    <GradientStop Color="LightBlue" Offset="1.0" />
+                                </LinearGradientBrush>
+                            </Frame.Background>
+
+                            <Label      Text="Resolve Fire"
+                                        FontSize="26"
+                                        HorizontalOptions="Center"
+                                        VerticalOptions="Center"
+                                        TextColor="#282828"
+                                        FontAttributes="Bold">
+                            </Label>
+                        </Frame>
+                    </Frame>
+
+                <!--Fire Tag-->
+                <Label      x:Name="fireTag" 
+                            Grid.Row="0" 
+                            Grid.Column="0" 
+                            FontSize="0">
+                </Label>
                 
-                BorderColor="Black"
-                HeightRequest="150"
-                WidthRequest="100"
-                Grid.Row="1"
-                Grid.Column="1"
-                BackgroundColor="LightGray"
-                HasShadow="True"
+                <!--Placename Label-->
+                <Label      x:Name="firePlaceName" 
+                            Grid.Row="2" 
+                            TextColor="Black" 
+                            FontAttributes="Bold" 
+                            HorizontalOptions="CenterAndExpand" 
+                            Grid.Column="1" 
+                            FontSize="20">
+                </Label>
                 
-                >
-                    <Label Text="Resolve Fire" FontSize="24" HorizontalOptions="Center"  VerticalOptions="Center" TextColor="Black" ></Label>
-                </Frame>
+                <!--Fire ID-->
+                <Label      x:Name="fireID" 
+                            Grid.Row="3" 
+                            Grid.Column="1" 
+                            FontSize="20"
+                            FontAttributes="Bold" 
+                            HorizontalOptions="CenterAndExpand" 
+                            TextColor="Black">
+                </Label>
 
-                <Label x:Name="fireTag" Grid.Row="0" Grid.Column="0" FontSize="0"></Label>
-                <Label x:Name="firePlaceName" Grid.Row="2" TextColor="Black" FontAttributes="Bold" HorizontalOptions="CenterAndExpand" Grid.Column="1" FontSize="20"></Label>
-                <Label x:Name="fireID" Grid.Row="3" Grid.Column="1" FontSize="20" FontAttributes="Bold" HorizontalOptions="CenterAndExpand" TextColor="Black"></Label>
+                <!--Image Import-->
+                <Image      x:Name="imgChoose" 
+                            HeightRequest="150" 
+                            Grid.Row="4" 
+                            Grid.Column="1" 
+                            Source="photo.png">
+                </Image>
 
-                <Image 
-                x:Name="imgChoose" 
-                HeightRequest="150" 
-                Grid.Row="4" 
-                Grid.Column="1" 
-                Source="photo.png"></Image>
-
-                <ActivityIndicator x:Name="overlay"  IsRunning="True" IsVisible="True" Color="Black" BackgroundColor="Transparent"
-                                   
-                                   Grid.Column="1"
-                                   Grid.Row="4"
-                                   
-                                   
-                                   >
-
+                <!--Activity Indicator-->
+                <ActivityIndicator      x:Name="overlay"  
+                                        IsRunning="True" 
+                                        IsVisible="True" 
+                                        Color="Black" 
+                                        BackgroundColor="Transparent"
+                                        Grid.Column="1"
+                                        Grid.Row="4">
                 </ActivityIndicator>
 
-                <Label x:Name="time" Grid.Row="0" Grid.Column="0" TextColor="white" FontSize="0"></Label>
+                <!--Time Label-->
+                <Label      x:Name="time" 
+                            Grid.Row="0" 
+                            Grid.Column="0" 
+                            TextColor="white" 
+                            FontSize="0">
+                </Label>
 
-                <Label x:Name="FireDescription" Text="Fire Description" Grid.Row="5" Grid.Column="1" TextColor="Black" FontSize="18"></Label>
+                <!--Fire Description-->
+                <Label      x:Name="FireDescription" 
+                            Text="Fire Description" 
+                            Grid.Row="5"
+                            Grid.Column="1" 
+                            TextColor="Black" 
+                            FontSize="18">
+                </Label>
 
-                <Editor x:Name="newDesc" Placeholder=" Information about Resolved Fire" MaxLength="100" HeightRequest="100" BackgroundColor="LightGray" Grid.Row="6" Grid.Column="1" TextColor="Black" Keyboard="Text"></Editor>
+                <!--New description Label-->
+                <Editor     x:Name="newDesc" 
+                            Placeholder=" Information about Resolved Fire" 
+                            MaxLength="100" 
+                            HeightRequest="100" 
+                            BackgroundColor="LightGray" 
+                            Grid.Row="6" 
+                            Grid.Column="1" 
+                            TextColor="Black" 
+                            Keyboard="Text">
+                </Editor>
 
-                <Button 
-                x:Name="photo_Add"
-                Grid.Row="8" 
-                Grid.Column="1" 
-                FontSize="20" 
-                Text="Add Photo +" 
-                BackgroundColor="LightGray" 
-                WidthRequest="300"
-                BorderColor="Black"
-                TextColor="Black"
-                HorizontalOptions="Center"
-                CornerRadius="10"
-                BorderWidth="3"
-                FontAttributes="Bold"
-                Clicked="photo_Add_Clicked"
-               ></Button>
+                <!-- Add Photo Button-->
+                <Button     x:Name="photo_Add"
+                            Grid.Row="8" 
+                            Grid.Column="1" 
+                            FontSize="20" 
+                            Text="Add Photo" 
+                            BackgroundColor="LightGray" 
+                            WidthRequest="300"
+                            BorderColor="Black"
+                            TextColor="Black"
+                            HorizontalOptions="Center"
+                            CornerRadius="10"
+                            BorderWidth="3"
+                            ImageSource="add.png"
+                            ContentLayout="Right"
+                            Padding="75,0,40,0"
+                            FontAttributes="Bold"
+                            Clicked="photo_Add_Clicked">
+                    <Button.Background>
+                        <LinearGradientBrush EndPoint="0,1">
+                            <GradientStop Color="LightGray"  Offset="0.1" />
+                            <GradientStop Color="white" Offset="1.0" />
+                        </LinearGradientBrush>
+                    </Button.Background>
+                </Button>
 
-                <Button 
-                x:Name="photo_Take"
-                Grid.Row="9" 
-                Grid.Column="1" 
-                FontSize="20" 
-                Text="Take Photo +" 
-                BackgroundColor="LightGray" 
-                WidthRequest="300"
-                BorderColor="Black"
-                TextColor="Black"
-                HorizontalOptions="Center"
-                CornerRadius="10"
-                BorderWidth="3"
-                FontAttributes="Bold"
-                    Clicked="photo_Take_Clicked"
-               ></Button>
+                <!--Photo Take Button-->
+                <Button     x:Name="photo_Take"
+                            Grid.Row="9" 
+                            Grid.Column="1" 
+                            FontSize="20" 
+                            Text="Take Photo" 
+                            BackgroundColor="LightGray" 
+                            WidthRequest="300"
+                            BorderColor="Black"
+                            TextColor="Black"
+                            HorizontalOptions="Center"
+                            CornerRadius="10"
+                            ImageSource="take.png"
+                            ContentLayout="Right"
+                            Padding="75,0,40,0"
+                            BorderWidth="3"
+                            FontAttributes="Bold"
+                            Clicked="photo_Take_Clicked">
+                    <Button.Background>
+                        <LinearGradientBrush EndPoint="0,1">
+                            <GradientStop Color="LightGray"  Offset="0.1" />
+                            <GradientStop Color="white" Offset="1.0" />
+                        </LinearGradientBrush>
+                    </Button.Background>
+                </Button>
 
-                <Image 
-                x:Name="imgNewChoose" 
-                HeightRequest="150" 
-                Grid.Row="10" 
-                Grid.Column="1" 
-                Source="photo.png"
-               ></Image>
+                <!--New Image -->
+                <Image      x:Name="imgNewChoose" 
+                            HeightRequest="150" 
+                            Grid.Row="10" 
+                            Grid.Column="1" 
+                            Source="photo.png">
+                </Image>
 
-                <ActivityIndicator Grid.Row="14" Grid.Column="1" BindingContext="{x:Reference imgChoose}" IsRunning="{Binding IsLoading}"></ActivityIndicator>
+                <!--Resolve Button-->
+                <Button     Text="Resolve"
+                            x:Name="btn_Res" 
+                            Grid.Row="12" 
+                            Grid.Column="1"                    
+                            BackgroundColor="#ff8c19"
+                            FontSize="20"
+                            FontAttributes="Bold"
+                            CornerRadius="10"
+                            BorderWidth="3"
+                            BorderColor="Black"
+                            TextColor="Black"
+                            ImageSource="smallres.png"
+                            ContentLayout="Right"
+                            Padding="75,0,40,0"
+                            Clicked="btn_Res_Clicked">
+                    <Button.Background>
+                        <LinearGradientBrush EndPoint="0,1">
+                            <GradientStop Color="#ff8c19"  Offset="0.7" />
+                            <GradientStop Color="White" Offset="1.0" />
+                        </LinearGradientBrush>
+                    </Button.Background>
+                </Button>
 
-
-                <Button  Text="Resolve"
-                     x:Name="btn_Res" 
-                     Grid.Row="12" 
-                     Grid.Column="1" 
-                    
-                     BackgroundColor="#ff8c19"
-                     FontSize="20"
-                     FontAttributes="Bold"
-                     CornerRadius="10"
-                     BorderWidth="3"
-                     BorderColor="Black"
-                     TextColor="Black"
-                     Clicked="btn_Res_Clicked"></Button>
-
-                <Button  Text="Cancel" 
-                     x:Name="btn_Cancel" 
-                     Grid.Row="14" 
-                     Grid.Column="1" 
-                    
-                     BackgroundColor="LightGray"
-                     FontSize="20"
-                     FontAttributes="Bold"
-                     CornerRadius="10"
-                     BorderWidth="3"
-                     BorderColor="Black"
-                     TextColor="Black"
-                         Clicked="btn_Cancel_Clicked"></Button>
-
-
-
+                <!--Cancel Button-->
+                <Button     Text="Cancel" 
+                            x:Name="btn_Cancel" 
+                            Grid.Row="13" 
+                            Grid.Column="1"                     
+                            BackgroundColor="LightGray"
+                            FontSize="20"
+                            FontAttributes="Bold"
+                            CornerRadius="10"
+                            BorderWidth="3"
+                            ImageSource="backarrow.png"
+                            ContentLayout="Left"
+                            Padding="40,0,75,0"
+                            BorderColor="Black"
+                            TextColor="Black"
+                            Clicked="btn_Cancel_Clicked">
+                    <Button.Background>
+                        <LinearGradientBrush EndPoint="0,1">
+                            <GradientStop Color="LightGray"  Offset="0.1" />
+                            <GradientStop Color="white" Offset="1.0" />
+                        </LinearGradientBrush>
+                    </Button.Background>
+                </Button>
             </Grid>
         </ScrollView>
     </ContentPage.Content>
