--- a/Wildfire/Views/SearchView.xaml
+++ b/Wildfire/Views/SearchView.xaml
@@ -4,6 +4,7 @@
              x:Class="Wildfire.Views.SearchView"  
              FocusOriginCommand="{Binding FocusOriginCommand}">
 
+    
     <Grid VerticalOptions="FillAndExpand"
               BackgroundColor="White"
               RowSpacing="0"
@@ -17,29 +18,26 @@
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
 
-        <StackLayout Grid.Row="0"  
-                             Padding="10"
-                             BackgroundColor="White"
-                             Orientation="Horizontal">
-            <Image Source="search.png"
-                               HeightRequest="20"
-                               WidthRequest="20"/>
-            <Entry Placeholder="Search a Location"
-                               Text="{Binding PickupText}"
-                               FontSize="18"
-                               x:Name="originEntry"
-                               ClassId="origin"
-                               FontAttributes="Italic"
-                               ReturnType="Search"
-                               HorizontalOptions="FillAndExpand" />
-            <Button ImageSource="search.png"
-                    Clicked="searchPlace_Clicked"/>
-
+        <StackLayout    Grid.Row="0"  
+                        Padding="10"
+                        BackgroundColor="White"
+                        Orientation="Horizontal">
+            <Image      Source="search.png"
+                        HeightRequest="20"
+                        WidthRequest="20"/>
+            <Entry      Placeholder="Search a Location"
+                        Text="{Binding PickupText}"
+                        FontSize="18"
+                        x:Name="originEntry"
+                        ClassId="origin"
+                        FontAttributes="Italic"
+                        ReturnType="Search"
+                        HorizontalOptions="FillAndExpand" />
+            <Button     ImageSource="search.png"
+                        Clicked="searchPlace_Clicked"/>
         </StackLayout>
-
-       
-
-        <ListView VerticalOptions="FillAndExpand"
+      
+        <ListView       VerticalOptions="FillAndExpand"
                         BackgroundColor="Transparent"
                         Grid.Row="2"
                         Footer=""
@@ -47,28 +45,30 @@
                         x:Name="list"
                         ItemsSource="{Binding Places}"
                         HasUnevenRows="true"
-                        SeparatorColor="Gray"
-                        >
+                        SeparatorColor="Gray">
+            
             <ListView.Triggers>
-                <DataTrigger TargetType="ListView"
+                <DataTrigger    TargetType="ListView"
                                  Binding="{Binding ShowRecentPlaces}"
                                  Value="True">
-                    <Setter Property="ItemsSource" Value="{Binding RecentPlaces}" />
+                    <Setter     Property="ItemsSource"
+                                Value="{Binding RecentPlaces}" />
                 </DataTrigger>
-                <DataTrigger TargetType="ListView"
-                                 Binding="{Binding ShowRecentPlaces}"
-                                 Value="False">
-                    <Setter Property="ItemsSource" Value="{Binding Places}" />
+                <DataTrigger    TargetType="ListView"
+                                Binding="{Binding ShowRecentPlaces}"
+                                Value="False">
+                    <Setter     Property="ItemsSource" 
+                                Value="{Binding Places}" />
                 </DataTrigger>
             </ListView.Triggers>
             <ListView.Header>
-                <StackLayout  x:Name="recentSearchText"
-                                      IsVisible="{Binding ShowRecentPlaces}">
-                    <Label LineBreakMode="WordWrap"
-                                 FontAttributes="Bold"
-                                 Margin="20,10"
-                                 x:Name="recentSearch"
-                                 Text="History"/>
+                <StackLayout    x:Name="recentSearchText"
+                                IsVisible="{Binding ShowRecentPlaces}">
+                    <Label      LineBreakMode="WordWrap"
+                                FontAttributes="Bold"
+                                Margin="20,10"
+                                x:Name="recentSearch"
+                                Text="History"/>
                 </StackLayout>
             </ListView.Header>
             <ListView.ItemTemplate>
