--- a/Wildfire/Views/SettingsView.xaml
+++ b/Wildfire/Views/SettingsView.xaml
@@ -1,17 +1,31 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
+<!-- Author:        Jack McNally
+     Page Name:     SettingsView
+     Purpose:       Settings View interface.
+-->
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Wildfire.Views.SettingsView"
-             Title="Settings"
-             BackgroundColor="White">
+             Title="Settings">
 
+    <!--Background Color-->
+    <ContentPage.Background>
+        <LinearGradientBrush EndPoint="0,1">
+            <GradientStop Color="#ff8c19"  Offset="0.0002" />
+            <GradientStop Color="White" Offset="0.25" />
+            <GradientStop Color="White" Offset="0.55" />
+            <GradientStop Color="#F7D9BB" Offset="0.8" />
+        </LinearGradientBrush>
+    </ContentPage.Background>
+
+    <!--Header-->
     <ContentPage.Content>
         <ScrollView>
         <Grid RowSpacing="7">
             <Grid.RowDefinitions>
                 <RowDefinition Height="0"/>
                 <RowDefinition Height="0"/>
-                <RowDefinition Height="56"/>
+                <RowDefinition Height="50"/>
                 <RowDefinition Height="0"/>
                 <RowDefinition Height="40" />
                 <RowDefinition Height="100"/>
@@ -25,80 +39,183 @@
                 <RowDefinition Height="0"/>
                 <RowDefinition Height="56"/>
                 <RowDefinition Height="25"/>
-                
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="300"/>
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
-
-            <!--<Label Text="Welcome" FontSize="24" HorizontalOptions="Center"  VerticalOptions="Center" TextColor="Black" ></Label>-->
             
-                <Label  Grid.Row="2" Grid.Column="1" Text="hello" x:Name="settingsDay" FontSize="34" FontAttributes="Bold" HorizontalOptions="Center" VerticalTextAlignment="Center" VerticalOptions="Center" TextColor="Black" ></Label>
+            <!--Day Label-->
+            <Label      Grid.Row="2" 
+                        Grid.Column="1" 
+                        Text="hello" 
+                        x:Name="settingsDay" 
+                        FontSize="34"
+                        FontAttributes="Bold"
+                        HorizontalOptions="Center" 
+                        VerticalTextAlignment="Center"
+                        VerticalOptions="Center" 
+                        TextColor="Black">
+            </Label>
 
-            
-            
-                <Label Grid.Row="4" Grid.Column="1" Text=" hello" x:Name="settingsDate" FontSize="24" HorizontalOptions="Center"  VerticalOptions="Center" TextColor="Black" ></Label>
+            <!--Date Label-->
+            <Label      Grid.Row="4" 
+                        Grid.Column="1" 
+                        Text=" hello" 
+                        x:Name="settingsDate"
+                        FontSize="24" 
+                        HorizontalOptions="Center"  
+                        VerticalOptions="Center" 
+                        TextColor="Black">
+            </Label>
 
-                <Image Source="xhdpi.png"
-                       Grid.Row="5"
-                       Grid.Column="1"
-                       HeightRequest="150"
-                       WidthRequest="150">
-                </Image>
+            <!--Logo Import-->
+            <Image      Source="xhdpi.png"
+                        Grid.Row="5"
+                        Grid.Column="1"
+                        HeightRequest="150"
+                        WidthRequest="150">
+            </Image>
 
+            <!--Notification On or Off Label-->
+            <Label      Grid.Row="8" 
+                        Grid.Column="1" 
+                        FontSize="18"  
+                        TextColor="black" 
+                        HorizontalOptions="Start" 
+                        Text="Notification ON/OFF">
+            </Label>
 
-               
+            <!--Notification Checkbox-->
+            <CheckBox   x:Name="notificationSettings"
+                        HorizontalOptions="End" 
+                        Grid.Row="8" 
+                        Grid.Column="1" 
+                        IsChecked="{Binding NotificationEnabled}" 
+                        CheckedChanged="OnChange">
+            </CheckBox>
 
-            <Label Grid.Row="8" Grid.Column="1" FontSize="18"  TextColor="black" HorizontalOptions="Start" Text="Notification ON/OFF"></Label>
-            <CheckBox x:Name="notificationSettings" HorizontalOptions="End" Grid.Row="8" Grid.Column="1" IsChecked="{Binding NotificationEnabled}" CheckedChanged="OnChange"> </CheckBox>
+            <!--Nt=otification Radius-->
+            <Label      Grid.Row="7" 
+                        Grid.Column="1" 
+                        FontSize="18" 
+                        TextColor="Black" 
+                        HorizontalOptions="Start"  
+                        VerticalOptions="Center" 
+                        Text="Notification Radius">
+            </Label>
 
-                
+            <!--Radius Entry-->
+            <Entry      x:Name="radiusSettings"  
+                        TextColor="Black" 
+                        PlaceholderColor="White" 
+                        HorizontalTextAlignment="End" 
+                        Grid.Row="7" 
+                        WidthRequest="132" 
+                        Grid.Column="1" 
+                        BackgroundColor="LightGray" 
+                        HorizontalOptions="End" 
+                        Text="{Binding Radius}" 
+                        Placeholder="Set Radius(Km)" 
+                        Keyboard="Numeric" 
+                        Completed="OnChange" 
+                        ClearButtonVisibility="WhileEditing" 
+                        ReturnType="Done">
+            </Entry> 
 
-                <Label Grid.Row="7" Grid.Column="1" FontSize="18" TextColor="Black" HorizontalOptions="Start"  VerticalOptions="Center" Text="Notification Radius"></Label>
-
-                <Entry x:Name="radiusSettings" HorizontalTextAlignment="End" Grid.Row="7" WidthRequest="132" Grid.Column="1" BackgroundColor="LightGray" HorizontalOptions="End" Text="{Binding Radius}" Placeholder="Set Radius(Km)" Keyboard="Numeric" Completed="OnChange" ClearButtonVisibility="WhileEditing" ReturnType="Done"></Entry> 
-
-            <Button
-                Text="Change Password"
-                Grid.Row="10"
-                Grid.Column="1"
-                FontSize="20"
-                CornerRadius="10"
-                BorderColor="Black"
-                BorderWidth="3"
-                HorizontalOptions="StartAndExpand"
-                WidthRequest="300"
-                BackgroundColor="LightCyan"
-                TextColor="Black"
-                FontAttributes="bold"
-                x:Name="ChangePass"
-                Clicked="ChangePass_Clicked">
-                    
+            <!--Change Password Button-->
+            <Button     Text="Change Password"
+                        Grid.Row="10"
+                        Grid.Column="1"
+                        FontSize="20"
+                        CornerRadius="10"
+                        BorderColor="Black"
+                        BorderWidth="3"
+                        HorizontalOptions="StartAndExpand"
+                        WidthRequest="300"
+                        BackgroundColor="LightCyan"
+                        TextColor="Black"
+                        FontAttributes="bold"
+                        x:Name="ChangePass"
+                        Clicked="ChangePass_Clicked">
+                    <Button.Background>
+                        <LinearGradientBrush EndPoint="0,1">
+                            <GradientStop Color="LightCyan"  Offset="0.1" />
+                            <GradientStop Color="white" Offset="1.0" />
+                        </LinearGradientBrush>
+                    </Button.Background>
             </Button>
             
-            <Button Text="Login"  Grid.Row="12" Grid.Column="1" Clicked="Login_Button_Clicked" FontSize="20"
-                     FontAttributes="Bold"
-                     CornerRadius="10"
-                     BorderWidth="3"
-                     BorderColor="Black"
-                     TextColor="Black" HorizontalOptions="Start" WidthRequest="145"  VerticalOptions="End" BackgroundColor="#ff8c19"></Button>
+            <!--Login Button-->
+            <Button     Text="Login"  
+                        Grid.Row="12" 
+                        Grid.Column="1" 
+                        Clicked="Login_Button_Clicked" 
+                        FontSize="20"
+                        FontAttributes="Bold"
+                        CornerRadius="10"
+                        BorderWidth="3"
+                        BorderColor="Black"
+                        TextColor="Black" 
+                        HorizontalOptions="Start" 
+                        WidthRequest="145"  
+                        BackgroundColor="#ff8c19">
+                    <Button.Background>
+                        <LinearGradientBrush EndPoint="0,1">
+                            <GradientStop Color="#ff8c19"  Offset="0.6" />
+                            <GradientStop Color="white" Offset="1.0" />
+                        </LinearGradientBrush>
+                    </Button.Background>
+                </Button>
 
-            <Button Text="Signup"  Grid.Row="12" Grid.Column="1" Clicked="Signup_Button_Clicked" FontSize="20"
-                     FontAttributes="Bold"
-                     CornerRadius="10"
-                     BorderWidth="3"
-                     BorderColor="Black"
-                     TextColor="Black" HorizontalOptions="End" WidthRequest="145" VerticalOptions="End" BackgroundColor="LightGray"></Button>
+            <!--Sign Up Button-->
+            <Button     Text="Signup"  
+                        Grid.Row="12" 
+                        Grid.Column="1" 
+                        Clicked="Signup_Button_Clicked" 
+                        FontSize="20"
+                        FontAttributes="Bold"
+                        CornerRadius="10"
+                        BorderWidth="3"
+                        BorderColor="Black"
+                        TextColor="Black" 
+                        HorizontalOptions="End" 
+                        WidthRequest="145" 
+                        BackgroundColor="LightGray">
+                    <Button.Background>
+                        <LinearGradientBrush EndPoint="0,1">
+                            <GradientStop Color="LightGray"  Offset="0.6" />
+                            <GradientStop Color="white" Offset="1.0" />
+                        </LinearGradientBrush>
+                    </Button.Background>
+                </Button>
 
-            <Button Text="Logout"  Grid.Row="14" Grid.Column="1" Clicked="Logout_Button_Clicked" FontSize="20"
-                     FontAttributes="Bold"
-                     CornerRadius="10"
-                     BorderWidth="3"
-                     BorderColor="Black"
-                     TextColor="Black" HorizontalOptions="CenterAndExpand" WidthRequest="300" VerticalOptions="End" BackgroundColor="#2daff0"></Button>
-        </Grid>
+            <!--Logout Button-->
+            <Button     Text="Logout"  
+                        Grid.Row="14" 
+                        Grid.Column="1" 
+                        Clicked="Logout_Button_Clicked" 
+                        FontSize="20"
+                        FontAttributes="Bold"
+                        CornerRadius="10"
+                        BorderWidth="3"
+                        BorderColor="Black"
+                        TextColor="Black" 
+                        ImageSource="enter.png"
+                        ContentLayout="Right"
+                        Padding="75,0,40,0"
+                        HorizontalOptions="CenterAndExpand" 
+                        WidthRequest="300" 
+                        BackgroundColor="#2daff0">
+                    <Button.Background>
+                        <LinearGradientBrush EndPoint="0,1">
+                            <GradientStop Color="#2daff0"  Offset="0.6" />
+                            <GradientStop Color="white" Offset="1.0" />
+                        </LinearGradientBrush>
+                    </Button.Background>
+                </Button>
+            </Grid>
         </ScrollView>
     </ContentPage.Content>
 </ContentPage>
