--- a/Wildfire/Views/SignUpPageView.xaml
+++ b/Wildfire/Views/SignUpPageView.xaml
@@ -1,124 +1,149 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
+<!-- Author:        Jack McNally
+     Page Name:     SignUpPageView
+     Purpose:       sign up view interface.
+-->
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Wildfire.Views.SignUpPageView"
-             BackgroundColor="White">
+             x:Class="Wildfire.Views.SignUpPageView">
+
+    <!--Background-->
+    <ContentPage.Background>
+        <LinearGradientBrush EndPoint="0,1">
+            <GradientStop Color="White"  Offset="0.8" />
+            <GradientStop Color="#ff8c19" Offset="1.0" />
+        </LinearGradientBrush>
+    </ContentPage.Background>
+
+    <!--Content Page-->
     <ContentPage.Content>
         <ScrollView>
-        <Grid>
-
-            <Grid.RowDefinitions>
+            <Grid RowSpacing="12">
+                <Grid.RowDefinitions>
                 <RowDefinition Height="135"></RowDefinition>
                 <RowDefinition Height="100"></RowDefinition>
-                <RowDefinition Height="20"></RowDefinition>
-                <RowDefinition Height="55"></RowDefinition>
-                <RowDefinition Height="5"></RowDefinition>
-                <RowDefinition Height="55"></RowDefinition>
-                <RowDefinition Height="15"></RowDefinition>
+                <RowDefinition Height="10"></RowDefinition>
+                <RowDefinition Height="50"></RowDefinition>
+                <RowDefinition Height="0"></RowDefinition>
+                <RowDefinition Height="50"></RowDefinition>
+                <RowDefinition Height="0"></RowDefinition>
                 <RowDefinition Height="45"></RowDefinition>
-                <RowDefinition Height="15"></RowDefinition>
-                <RowDefinition Height="50"></RowDefinition>
-                <RowDefinition Height="50"></RowDefinition>
-                
+                <RowDefinition Height="0"></RowDefinition>
+                <RowDefinition Height="56"></RowDefinition>
+                <RowDefinition Height="56"></RowDefinition>
             </Grid.RowDefinitions>
-
             <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*"></ColumnDefinition>
                     <ColumnDefinition Width="300"></ColumnDefinition>
                     <ColumnDefinition Width="*"></ColumnDefinition>
             </Grid.ColumnDefinitions>
-            
-           
-            <Label
-                Text="Create an Account"
-                HorizontalTextAlignment="Center"
-                TextColor="Black"
-                FontSize="50"
-                Margin="0, 10"
-                FontAttributes="Bold"
-                Grid.Row="0"
-                Grid.Column="1">
 
-            </Label>
-                <Image Source="xhdpi.png"
-                       Grid.Row="1"
-                       HeightRequest="150"
-                       WidthRequest="150"
-                       Grid.Column="1">
+                <!--Create account label-->
+                <Label      Text="Create an Account"
+                            HorizontalTextAlignment="Center"
+                            TextColor="Black"
+                            FontSize="50"
+                            Margin="0, 10"
+                            FontAttributes="Bold"
+                            Grid.Row="0"
+                            Grid.Column="1">
+                </Label>
+                
+                <!--Logo Import-->
+                <Image      Source="xhdpi.png"
+                            Grid.Row="1"
+                            HeightRequest="150"
+                            WidthRequest="150"
+                            Grid.Column="1">
                 </Image>
 
+                <!--Email Entry-->
+                <Entry      Placeholder="E-mail"
+                            Keyboard="Email"
+                            x:Name="EmailInput"
+                            BackgroundColor="LightGray"
+                            PlaceholderColor="DarkGray"
+                            TextColor="Black"
+                            Grid.Row="3"
+                            WidthRequest="200"
+                            Grid.Column="1">
+                </Entry>
 
-                <Entry 
-                Placeholder="E-mail"
-                Keyboard="Email"
-                x:Name="EmailInput"
-                BackgroundColor="LightGray"
-                Margin="20,5"
-                PlaceholderColor="DarkGray"
-                TextColor="Black"
-                Grid.Row="3"
-                WidthRequest="200"
-                Grid.Column="1"/>
+                <!--Password Entry-->
+                <Entry      Placeholder="Password"
+                            IsPassword="True"
+                            x:Name="PasswordInput"
+                            BackgroundColor="LightGray"
+                            TextColor="Black"
+                            PlaceholderColor="DarkGray"
+                            Grid.Row="5"
+                            WidthRequest="200"
+                            Grid.Column="1">
+                </Entry>
 
-            <Entry
-                Placeholder="Password"
-                IsPassword="True"
-                x:Name="PasswordInput"
-                BackgroundColor="LightGray"
-                Margin="20,5"
-                TextColor="Black"
-                PlaceholderColor="DarkGray"
-                Grid.Row="5"
-                WidthRequest="200"
-                Grid.Column="1"/>
+                <!--Firefighter Label-->
+                <Label      Text="Please confirm you are a verified Firefighter?" 
+                            TextColor="Black"
+                            HorizontalOptions="CenterAndExpand"
+                            Grid.Row="7"
+                            Grid.Column="1"
+                            FontSize="18"
+                            LineBreakMode="CharacterWrap"
+                            Margin="25,0"
+                            HorizontalTextAlignment="Start">
+                </Label>
 
-            <Label Text="Please confirm you are a verified Firefighter" TextColor="Black"
-                   HorizontalOptions="CenterAndExpand"
-                   Grid.Row="7"
-                   Grid.Column="1"
-                   FontSize="16"
-                   LineBreakMode="CharacterWrap"
-                   Margin="40,0"
-                   HorizontalTextAlignment="Start"/>
+                <!--Checkbox-->
+                <CheckBox   Grid.Row="7"
+                            Grid.Column="1"
+                            HorizontalOptions="End"
+                            Margin=" 30,0"
+                            x:Name ="firefighterCon">
+                </CheckBox>
 
-            <CheckBox
-                Grid.Row="7"
-                Grid.Column="1"
-                HorizontalOptions="End"
-                Margin=" 30,0"
-                x:Name ="firefighterCon">
-                
-            </CheckBox>
+                <!--Sign Up Button-->
+                <Button     Text="Sign Up"
+                            Clicked="SignUp_Clicked"                
+                            BackgroundColor="#ff8c19"
+                            TextColor="Black"
+                            BorderColor="Black"
+                            CornerRadius="10"
+                            BorderWidth="3"
+                            FontSize="20"
+                            FontAttributes="Bold"
+                            Grid.Row="9"  
+                            Grid.Column="1">
+                    <Button.Background>
+                        <LinearGradientBrush EndPoint="0,1">
+                            <GradientStop Color="#ff8c19"  Offset="0.6" />
+                            <GradientStop Color="White" Offset="1.0" />
+                        </LinearGradientBrush>
+                    </Button.Background>
+                </Button>
 
-            <Button
-                Text="Sign Up"
-                Clicked="SignUp_Clicked"
-                
-                BackgroundColor="#ff8c19"
-                TextColor="Black"
-                BorderColor="Black"
-                CornerRadius="10"
-                BorderWidth="3"
-                FontSize="20"
-                FontAttributes="Bold"
-                Grid.Row="9"
-                Grid.Column="1"/>
-
-            <Button
-                Text="Back"
-                Clicked="Back_Clicked"
-                
-                BackgroundColor="LightGray"
-                TextColor="black"
-                BorderColor="Black"
-                CornerRadius="10"
-                BorderWidth="3"
-                FontSize="20"
-                FontAttributes="Bold"
-                Grid.Row="10"
-                Grid.Column="1"/>
-
-        </Grid>
+                <!--Back Button-->
+                <Button     Text="Back"
+                            Clicked="Back_Clicked"                
+                            BackgroundColor="LightGray"
+                            TextColor="black"
+                            BorderColor="Black"
+                            CornerRadius="10"
+                            BorderWidth="3"
+                            FontSize="20"
+                            FontAttributes="Bold"
+                            Grid.Row="10"
+                            ImageSource="backarrow.png"
+                            ContentLayout="Left"
+                            Padding="40,0,75,0"
+                            Grid.Column="1">
+                    <Button.Background>
+                        <LinearGradientBrush EndPoint="0,1">
+                            <GradientStop Color="LightGray"  Offset="0.1" />
+                            <GradientStop Color="white" Offset="1.0" />
+                        </LinearGradientBrush>
+                    </Button.Background>
+                </Button>
+            </Grid>
         </ScrollView>
     </ContentPage.Content>
 </ContentPage>
