--- a/Wildfire/Views/ProCurrentFiresView.xaml
+++ b/Wildfire/Views/ProCurrentFiresView.xaml
@@ -77,7 +77,7 @@
                     <DataTemplate>
                         <TextCell   Grid.Row="1"
                                     Text="{Binding PlaceName}"
-                                    Detail="{Binding Description}"
+                                    Detail="{Binding Time}"
                                     TextColor="Black"
                                     DetailColor="Gray">
                         </TextCell>
